--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         run: python -m pip install --upgrade pip
 
       - name: Install Requirements
-        run: python -m pip install -r requirements.txt
+        run: python -m pip install .  && python -m pip install .dev
 
       - name: Run Tests with Pytest and Coverage
         run: |
