--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,10 +21,10 @@ jobs:
           python-version: "3.12"
 
       - name: Update Pip
-        run: python -m pip install --upgrade pip
+        run: python -m pip install poetry
 
       - name: Install Requirements
-        run: python -m pip install .  && python -m pip install .dev
+        run: python -m poetry install
 
       - name: Run Tests with Pytest and Coverage
         run: |
