--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,14 +21,15 @@ jobs:
           python-version: "3.12"
 
       - name: Update Pip
-        run: python -m pip install poetry
+        run: |
+          python -m pip install poetry
+          python -m pip install pytest
 
       - name: Install Requirements
         run: python -m poetry install
 
       - name: Run Tests with Pytest and Coverage
         run: |
-          poetry env activate
           pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=app tests/ | tee pytest-coverage.txt
 
       - name: Show coverage file content
