--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           python -m pip install poetry
           python -m pip install pytest
+          python -m pip install pytest-cov
 
       - name: Install Requirements
         run: python -m poetry install
