--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,7 @@ jobs:
       - name: Update Pip
         run: |
           python -m pip install poetry
-          python -m pip install pytest
-          python -m pip install pytest-cov
+          poetry env use system
 
       - name: Install Requirements
         run: python -m poetry install
