--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,13 +20,15 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Update Pip
+      - name: Install pipt
         run: |
           python -m pip install poetry
-          poetry env use system
+          poetry self add poetry-plugin-export
+          poetry export -f requirements.txt --dev --output requirements.txt --without-hashes
+          cat requirements.txt
 
       - name: Install Requirements
-        run: python -m poetry install
+        run: pip install -r requirements.txt
 
       - name: Run Tests with Pytest and Coverage
         run: |
