--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,19 +20,20 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install pipt
-        run: |
-          python -m pip install poetry
-          poetry self add poetry-plugin-export
-          poetry export -f requirements.txt --dev --output requirements.txt --without-hashes
-          cat requirements.txt
+      - name: Update Pip
+        run: python -m pip install --upgrade pip
 
       - name: Install Requirements
-        run: pip install -r requirements.txt
+        run: python -m pip install -r requirements.txt
 
       - name: Run Tests with Pytest and Coverage
         run: |
           pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=app tests/ | tee pytest-coverage.txt
+          exit_code=${PIPESTATUS[0]}
+          if [ $exit_code -ne 0 ]; then
+            echo "Tests failed. Exiting with code $exit_code."
+            exit $exit_code
+          fi
 
       - name: Show coverage file content
         run: cat pytest-coverage.txt
