--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,11 @@ pydeck==0.9.1 ; python_version >= "3.12"
 pygments==2.19.1 ; python_version >= "3.12"
 python-dateutil==2.9.0.post0 ; python_version >= "3.12"
 pytz==2025.2 ; python_version >= "3.12"
+pytest==8.3.5
+pytest-cov==6.1.1
+beautifulsoup4==4.13.3
+wfork-streamlit-profiler==1.3.0
+black==25.1.0
 referencing==0.36.2 ; python_version >= "3.12"
 renishawwire==0.1.16 ; python_version >= "3.12"
 requests==2.32.3 ; python_version >= "3.12"
