--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,23 +20,20 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Update Pip
-        run: python -m pip install --upgrade pip
+      - name: Install [oetry
+        run: python -m pip install poetry
 
       - name: Install Requirements
-        run: python -m pip install -r requirements.txt
+        run: python -m poetry install
 
       - name: Run Tests with Pytest and Coverage
         run: |
-          pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=app tests/ | tee pytest-coverage.txt
+          poetry pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=app tests/ | tee pytest-coverage.txt
           exit_code=${PIPESTATUS[0]}
           if [ $exit_code -ne 0 ]; then
             echo "Tests failed. Exiting with code $exit_code."
             exit $exit_code
           fi
-
-      - name: Show coverage file content
-        run: cat pytest-coverage.txt
 
       - name: Pytest Coverage Comment
         id: coverageComment
