--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,48 +20,27 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install [oetry
-        run: python -m pip install poetry
-
-      - name: Install Requirements
-        run: python -m poetry install
+      - name: Install Poetry and run it
+        run: | 
+          python -m pip install poetry
+          python -m poetry install
 
       - name: Run Tests with Pytest and Coverage
         run: |
-          poetry run pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=app tests/ | tee pytest-coverage.txt
-          exit_code=${PIPESTATUS[0]}
-          if [ $exit_code -ne 0 ]; then
-            echo "Tests failed. Exiting with code $exit_code."
-            exit $exit_code
-          fi
+          # Run the tests with coverage and generate the badge
+          poetry run coverage run -m pytest --junitxml=reports/tests/tests.xml --html=reports/tests/report.html
+          poetry run genbadge tests --input-file=reports/tests/tests.xml --output-file=reports/tests/tests-badge.svg
+          # Generate the coverage and the badge
+          poetry run coverage html
+          poetry run coverage xml
+          poetry run genbadge coverage --output-file=reports/coverage/coverage-badge.svg
 
-      - name: Pytest Coverage Comment
-        id: coverageComment
-        uses: MishaKav/pytest-coverage-comment@main
-        with:
-          pytest-coverage-path: ./pytest-coverage.txt
-          junitxml-path: ./pytest.xml
-
-      - name: Check the Output Coverage
+      - name: Commit and push badge
         run: |
-          echo "Coverage Percentage - ${{ steps.coverageComment.outputs.coverage }}"
-          echo "Coverage Color - ${{ steps.coverageComment.outputs.color }}"
-          echo "Coverage Html - ${{ steps.coverageComment.outputs.coverageHtml }}"
-          echo "Coverage Warnings - ${{ steps.coverageComment.outputs.warnings }}"
-          echo "Coverage Errors - ${{ steps.coverageComment.outputs.errors }}"
-          echo "Coverage Failures - ${{ steps.coverageComment.outputs.failures }}"
-          echo "Coverage Skipped - ${{ steps.coverageComment.outputs.skipped }}"
-          echo "Coverage Tests - ${{ steps.coverageComment.outputs.tests }}"
-          echo "Coverage Time - ${{ steps.coverageComment.outputs.time }}"
-          echo "Not Success Test Info - ${{ steps.coverageComment.outputs.notSuccessTestInfo }}"
-
-      - name: Create the Badge
-        uses: schneegans/dynamic-badges-action@v1.7.0
-        with:
-          auth: ${{ secrets.PYTEST_COVERAGE_COMMENT }}
-          gistID: f16aa96ae648cb1668b4d57a531b5e9b
-          filename: raft-pytest-coverage-comment__main.json
-          label: Coverage Report
-          message: ${{ steps.coverageComment.outputs.coverage }}
-          color: ${{ steps.coverageComment.outputs.color }}
-          namedLogo: python
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add reports
+          git commit -m "Added reports"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.PYTEST_COVERAGE_COMMENT }}
