--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pytest-cov = "6.1.1"
 beautifulsoup4 = "4.13.3"
 wfork-streamlit-profiler = "1.3.0"
 black = '25.1.0'
+genbadge = { version = "1.1.2", extras = ["all"] }
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -34,3 +35,12 @@ build-backend = "poetry.core.masonry.api"
 
 [project.urls]
 repository = "https://github.com/emmanuelpean/raft"
+
+[tool.coverage.run]
+data_file = "reports/coverage/.coverage"
+
+[tool.coverage.html]
+directory = "reports/coverage/htmlcov"
+
+[tool.coverage.xml]
+output = "reports/coverage/coverage.xml"
