--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ beautifulsoup4 = "4.13.3"
 wfork-streamlit-profiler = "1.3.0"
 black = '25.1.0'
 genbadge = { version = "1.1.2", extras = ["all"] }
+pytest-html = "4.1.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
