--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,10 +27,16 @@ jobs:
 
       - name: Run Tests with Pytest and Coverage
         run: |
-          # Run the tests with coverage and generate the badge
           poetry run coverage run -m pytest --junitxml=reports/tests/tests.xml --html=reports/tests/report.html
+          exit_code=${PIPESTATUS[0]}
+          if [ $exit_code -ne 0 ]; then
+            echo "Tests failed. Exiting with code $exit_code."
+            exit $exit_code
+          fi
+
+      - name: Generate badges and coverage
+        run: |
           poetry run genbadge tests --input-file=reports/tests/tests.xml --output-file=reports/tests/tests-badge.svg
-          # Generate the coverage and the badge
           poetry run coverage html
           poetry run coverage xml
           poetry run genbadge coverage --output-file=reports/coverage/coverage-badge.svg
