--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,20 +22,20 @@ jobs:
 
       - name: Install Poetry and run it
         run: | 
-          python -m pip install poetry
-          python -m poetry install
+          python -m pip install --upgrade pip
+          python -m pip install .[dev]
 
       - name: Run Tests with Pytest and Coverage
         run: |
-          poetry run coverage run -m pytest --junitxml=reports/tests/tests.xml --html=reports/tests/report.html
+          coverage run -m pytest --junitxml=reports/tests/tests.xml --html=reports/tests/report.html
 
       - name: Generate badges and coverage
         run: |
-          poetry run genbadge tests --input-file=reports/tests/tests.xml --output-file=reports/tests/tests-badge.svg
-          poetry run coverage html
-          poetry run coverage xml
-          poetry run genbadge coverage --output-file=reports/coverage/coverage-badge.svg
-          poetry run coverage html
+          genbadge tests --input-file=reports/tests/tests.xml --output-file=reports/tests/tests-badge.svg
+          coverage html
+          coverage xml
+          genbadge coverage --output-file=reports/coverage/coverage-badge.svg
+          coverage html
 
       - name: Commit and push badge
         run: |
