--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.12"
+
 dependencies = [
     "numpy==2.2.5",
     "lxml==5.3.1",
@@ -18,21 +19,20 @@ dependencies = [
     "streamlit==1.42.2",
 ]
 
-[tool.poetry]
-package-mode = false
-
-[tool.poetry.group.dev.dependencies]
-pytest = "8.3.5"
-pytest-cov = "6.1.1"
-beautifulsoup4 = "4.13.3"
-wfork-streamlit-profiler = "1.3.0"
-black = '25.1.0'
-genbadge = { version = "1.1.2", extras = ["all"] }
-pytest-html = "4.1.1"
+[project.optional-dependencies]
+dev = [
+    "pytest==8.3.5",
+    "pytest-cov==6.1.1",
+    "beautifulsoup4==4.13.3",
+    "wfork-streamlit-profiler==1.3.0",
+    "black==25.1.0",
+    "genbadge[all]==1.1.2",
+    "pytest-html==4.1.1"
+]
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project.urls]
 repository = "https://github.com/emmanuelpean/raft"
