--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install Poetry and run it
+      - name: Update pip and install depedencies
         run: | 
           python -m pip install --upgrade pip
           python -m pip install .[dev]
