--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ license = "MIT"
 requires-python = ">=3.12"
 
 dependencies = [
+    "setuptools",
     "numpy==2.2.5",
     "lxml==5.3.1",
     "renishawwire==0.1.16",
