--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,7 @@
-name: Test
-on: [push, pull_request]
+name: Test and Deploy
+
+on:
+  push:
 
 permissions:
   contents: write
@@ -20,7 +22,7 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Update pip and install depedencies
+      - name: Update pip and install dependencies
         run: | 
           python -m pip install --upgrade pip
           python -m pip install .[dev]
@@ -46,3 +48,19 @@ jobs:
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.PYTEST_COVERAGE_COMMENT }}
+
+  deploy:
+    name: Deploy to VPS
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_SSH_KEY }}
+          script: |
+            cd /home/my_apps
+            ./deploy_raft.sh
