--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,11 +56,11 @@ jobs:
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Deploy via SSH
-        uses: appleboy/ssh-action@v1.0.3
+        uses: appleboy/ssh-action@v1.2.2
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            cd /home/my_apps
+            cd /home/my_apps/scripts/
             ./deploy_raft.sh
